--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,10 +1,8 @@
 {
-    "extends": "../../tsconfig.json",
-    "compilerOptions": {
-        "outDir": "dist",
-        "module": "CommonJS"
-    },
-    "include": [
-        "src"
-    ]
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "dist",
+    "module": "CommonJS"
+  },
+  "include": ["src"]
 }
