--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,14 +4,18 @@
   "main": "index.js",
   "author": "Cristian Romero",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/index.ts"
+  },
   "dependencies": {
     "apollo-server-express": "^3.13.0",
-    "express": "^5.1.0",
+    "express": "4",
     "graphql": "^16.11.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.1",
+    "@types/express": "4",
     "@types/node": "^22.15.3",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
