--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rick-and-morty-backend",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "author": "Cristian Romero",
   "license": "MIT",
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.13.0",
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "express": "4",
-    "graphql": "^16.11.0"
+    "graphql": "^16.11.0",
+    "pg": "^8.15.6",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "@types/express": "4",
