--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,11 +14,14 @@
     "express": "4",
     "graphql": "^16.11.0",
     "pg": "^8.15.6",
-    "sequelize": "^6.37.7"
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.7",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@types/express": "4",
     "@types/node": "^22.15.3",
+    "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
