updates: - ADD: script to add initial data to db done and executed - ADD: using plugins to stop http server when apollo does as well

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,8 @@
   "author": "Cristian Romero",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "seed": "ts-node src/scripts/seedCharacters.ts"
   },
   "dependencies": {
     "apollo-server-express": "^3.13.0",
