--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rick-and-morty-backend",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "main": "index.js",
   "author": "Cristian Romero",
   "license": "MIT",
@@ -14,6 +14,7 @@
     "dotenv": "^16.5.0",
     "express": "4",
     "graphql": "^16.11.0",
+    "ioredis": "^5.6.1",
     "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.7",
