--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "seed": "ts-node src/scripts/seedCharacters.ts"
+    "seed": "ts-node src/scripts/seedCharacters.ts",
+    "update:characters": "ts-node src/scripts/updateCharacters.ts"
   },
   "dependencies": {
     "apollo-server-express": "^3.13.0",
@@ -15,6 +16,7 @@
     "express": "4",
     "graphql": "^16.11.0",
     "ioredis": "^5.6.1",
+    "node-cron": "^3.0.3",
     "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.7",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@types/express": "4",
     "@types/node": "^22.15.3",
+    "@types/node-cron": "^3.0.11",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
