Initial mock for testing

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,3 +1,6 @@
+# NODE ENVIROMENT
+NODE_ENV='test'
+
 # APP PORT
 PORT=4000
 
@@ -10,3 +13,6 @@ DB_PORT=
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
+
+# DB SETTING FOR TEST
+DB_NAME_TEST=
