--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -46,8 +46,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.5",
     "autoprefixer": "^10.4.21",
-    "tailwindcss": "^4.1.5"
+    "postcss": "^8.5.3",
+    "tailwindcss": "3.3.3"
   }
 }
